# fusdb

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  reactor_browser.ipynb  reactor_overview.ipynb  relation_global_mode.ipynb  relation_graph.html  relation_map.ipynb
.binder/: requirements.txt
.claude/: settings.json
.github/workflows/: pages.yml  publish-wheel.yml
docs/: .pages  LicenseNotes.md  api.rst  conf.py  getting_started.md  index.html  index.md  mkdocs-public.yml  mkdocs.yml  physics_domains.md  reactor_browser.ipynb  reactor_class.md  reactor_overview.ipynb  reactors.md  references.bib  relation_class.md  relation_graph.html  relation_graph_generator.ipynb  relation_map.ipynb  relations_variables.md  relationsystem.md  relationsystem_class.md  tau_E_solver.ipynb  variable_class.md  workflows.md
docs/bibliography/: bibliography.bib  index.md
docs/code_docs/: .pages  behaviour.md  index.md  notebooks.md  profile_integration.md  reactivities.md  reactivity_plotter.md  reactor_browser.ipynb  reactor_class.md  reactors.md  relation_class.md  relation_graph_generator.ipynb  relation_interactions.md  relations_variables.md  (+2 more)
examples/: dhe3_profile_shape_optimization.ipynb  fusdb_pyomo_examples.ipynb  reactivity_plots.ipynb  reactor_browser.ipynb  read_ENDF6-format.ipynb  reconcile_all_reactors.ipynb  reconcile_overview.ipynb  relation_graph_generator.ipynb  steady_state_plasma_composition.ipynb  tau_E_solver.ipynb
reactors/: example_reactor.yaml  reactor_example.yaml
site/: 404.html  bibliography.bib  index.html  mkdocs.yml  objects.inv  sitemap.xml
site-public/: 404.html  index.html  mkdocs-public.yml  mkdocs.yml  objects.inv  sitemap.xml
src/: fusdb_pyomo.rar  fusdb_pyomo_old.rar
tests/: demo_real_tau_block_test.py  test_composition_solver.py  test_constraint_solver.py  test_jac_sparsity_fallback.py  test_loader.py  test_package_level_relations.py  test_plasma_composition_relations.py  test_popcon_class.py  test_profile_constraint_scalarization.py  test_reactivity_functions.py  test_reactivity_plotter.py  test_reactivity_tables.py  test_reactor_baselines.py  test_reactor_plotting.py  test_reactor_relationsystem_template.py  test_reactor_tables.py  test_reactor_validation.py  test_reconcile_culprits.py  test_reducers.py  test_registry_parse_variables.py  test_relation_backend_audit.py  test_relation_class.py  test_relation_graph_plotter.py  test_relation_profile_integration.py  test_relation_util_filtering.py  test_relationsystem_two_phase_solver.py  test_scipy_solver_workers_compat.py  test_tau_e_ploss_solver.py  test_variable_class.py
tools/: audit_relation_backends.py
(+375 files in other folders)
