[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fusdb"
version = "0.1.0"
description = "Fusion reactor scenario database with per-folder YAML and a single Reactor class."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "sympy>=1.12", "scipy>=1.11", "networkx>=3.0", "pycountry>=24.6.1", "hypernetx==2.4.0", "pandas==2.2.2", "fastjsonschema>=2.18", "pyomo>=6.7"]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
docs = [
    "matplotlib>=3.7",
    "mkdocs-awesome-pages-plugin>=2.10",
    "mkdocs-bibtex>=4.4",
    "mkdocs-gen-files>=0.5",
    "mkdocs-jupyter==0.25.1",
    "mkdocs==1.6.1",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.11",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fusdb = ["registry/*.yaml", "registry/reactivity_tables/*.yaml"]
